--- a/package.json
+++ b/package.json
@@ -4,15 +4,13 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-scripts": "^4.0.0",
     "web-vitals": "^3.0.3"
   },
+  "devDependencies": {},
   "eslintConfig": {
     "extends": [
       "react-app"
     ]
-  },
-  "devDependencies": {
-    "typescript": "latest",
-    "react-refresh": "0.10.0"
   }
 }
